--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,3 +8,12 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
+
+
+
+.ExloreItemWrp {
+    height: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
