--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,3 +17,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+
+@media (max-width:768px) {
+    .ExloreItemWrp {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
