--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
   --parimaryBackground: #003173;
   --btnBackground: #0367b4;
   --secbtn: #ecedee;
-  --yellowBorder: #da9e30;
+  --yellowBorder: #febb02;
 }
 
 html,
