--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,20 +4,25 @@
 
 .OfferItemWrp {
     height: 200px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    width: 100%;
+    display: flex;
+    overflow-x: scroll
 }
 
-
+.OfferItemWrp::-webkit-scrollbar {
+    display: none;
+}
 
 .ExloreItemWrp {
     height: 200px;
     width: 100%;
     display: flex;
-    overflow: hidden;
+    overflow-x: scroll;
 }
 
+.ExloreItemWrp::-webkit-scrollbar {
+    display: none;
+}
 
 
 
