--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,4 +1,77 @@
 .footerWrp {
-    height: 300px;
-    /* background: var(--parimaryBackground); */
+    height: fit-content;
+    background-color: var(--parimaryBackground);
+}
+
+.scribeWrp {
+    height: 240px;
+    margin-top: 27px;
+    display: flex;
+    align-items: center
+}
+
+.scribe {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    color: #fff;
+
+}
+
+.scribe>h1 {
+    margin: 0px;
+    padding: 0px;
+}
+
+.scribe>div>input {
+    width: 300px;
+    margin-right: 10px;
+    color: rgb(50, 50, 50);
+}
+
+.scribe>div>button {
+    background-color: var(--btnBackground);
+    color: #fff;
+}
+
+.scribe>div>input,
+.scribe>div>button {
+    padding: 15px;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.FotoorRowWrp {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: fit-content;
+    grid-gap: 20px;
+    padding-bottom: 30px;
+}
+
+.FotoorRowWrp>div {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+}
+
+.link {
+    padding: 6px 0px;
+}
+
+@media (max-width:768px) {
+    .FotoorRowWrp {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media (max-width:425px) {
+    .FotoorRowWrp {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
 }
