--- a/styles/Header/HeaderBottom.module.css
+++ b/styles/Header/HeaderBottom.module.css
@@ -12,7 +12,7 @@
     color: #fff;
 }
 
-.lastHeader>button {
+.btn {
     color: #fff;
     background: var(--btnBackground);
     padding: 8px 10px;
