--- a/styles/Loading.module.css
+++ b/styles/Loading.module.css
@@ -1,12 +1,13 @@
 .loadingWrp {
     z-index: 100;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.505);
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .loader {
