--- a/styles/home/HotelItem.module.css
+++ b/styles/home/HotelItem.module.css
@@ -10,12 +10,6 @@
     margin-bottom: 30px;
 }
 
-
-
-/* .hotelWrp>div {
-    border: 1px solid red;
-} */
-
 .discription>* {
     padding: 0px;
     margin: 0px;
@@ -57,10 +51,6 @@
     grid-gap: 5px;
 }
 
-/* .price>div {
-    border: 1px solid red;
-} */
-
 .btn {
     background: var(--btnBackground);
     color: #fff;
@@ -94,7 +84,7 @@
     display: flex;
     flex-direction: column;
     text-align: right;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .prigingWrp>h2 {
