--- a/styles/home/Explore.module.css
+++ b/styles/home/Explore.module.css
@@ -1,11 +1,80 @@
-.titleWRp {
-    transform: translateY(90px);
-    color: #fff;
-    width: 200px;
+.offerWrp {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-content: space-between;
+
 }
 
-.titleWRp>h4 {
-    font-size: 20px;
-    margin-bottom: -5px;
+.offerWrp>div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.Image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.description {
+    position: absolute;
+    z-index: 10;
+    color: #fff;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(transparent, #000000a6);
+    top: 10px;
+}
+
+.description>div {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+.description>div>h2,
+.description>div>p {
+    margin: 0px;
+    padding: 0px;
+}
+
+.description>div>p {
+    padding-bottom: 10px;
+    padding-top: 8px;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.902);
+}
+
+
+
+
+
+
+
+@media (max-width:1024px) {
+    .offerWrp {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 20px;
+
+    }
+
+}
+
+
+@media (max-width:768px) {
+    .offerWrp {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 20px;
+
+    }
 
 }
