--- a/styles/Header/Bar.module.css
+++ b/styles/Header/Bar.module.css
@@ -26,10 +26,11 @@
 
 .btn {
     padding: 8px 10px;
-    background: var(--btnBackground);
     border: none;
     color: #fff;
     border-radius: 5px;
+    background-color: var(--btnBackground);
+
 }
 
 .BarWrper>div {
@@ -67,6 +68,7 @@
     margin-top: 35px;
     border: 2px solid var(--yellowBorder);
     background: #fff;
+    z-index: 10;
 }
 
 .optionModule {
@@ -80,6 +82,7 @@
     justify-content: space-between;
     flex-direction: column;
     background: #fff;
+    z-index: 10;
 }
 
 .optionModule>div {
