--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,12 +3,8 @@
 }
 
 .OfferItemWrp {
-    height: 200px;
+    height: 250px;
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 15px;
-
 }
 
 .OfferItemWrp::-webkit-scrollbar {
@@ -18,8 +14,6 @@
 .ExloreItemWrp {
     height: 200px;
     width: 100%;
-    display: flex;
-    overflow-x: scroll;
 }
 
 .ExloreItemWrp::-webkit-scrollbar {
@@ -27,18 +21,24 @@
 }
 
 
+@media (max-width:1024px) {
 
+
+
+    .ExloreItemWrp {
+        height: 300px;
+    }
+}
 
 @media (max-width:768px) {
-
     .OfferItemWrp {
-        grid-template-columns: 1fr !important;
-
+        height: 500px;
     }
 
 
     .ExloreItemWrp {
-        grid-template-columns: 1fr 1fr;
+        height: 450px;
+
 
     }
 }
