--- a/styles/home/HotelItem.module.css
+++ b/styles/home/HotelItem.module.css
@@ -5,9 +5,16 @@
     border-radius: 3px;
     padding: 10px;
     display: grid;
-    grid-template-columns: 1.2fr 1.8fr 1fr;
+    grid-template-columns: 230px 1fr 170px;
     grid-gap: 20px;
     margin-bottom: 30px;
+}
+
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .discription>* {
@@ -96,4 +103,28 @@
     padding-bottom: 3px;
     margin: 0px;
     color: rgb(110, 110, 110);
+}
+
+
+
+@media (max-width:1023px) {
+    .hotelWrp {
+        grid-template-columns: 1fr;
+        grid-template-rows: 230px 1fr 170px;
+    }
+}
+
+@media (max-width:768px) {
+    .hotelWrp {
+        grid-template-columns: 1fr;
+        grid-template-rows: 230px 1fr 170px;
+    }
+
+    .discription {
+        width: 100%;
+    }
+
+    .price {
+        width: 100%;
+    }
 }
