--- a/styles/home/Offer.module.css
+++ b/styles/home/Offer.module.css
@@ -1,20 +1,71 @@
-.image {
+.offerWrp {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: space-between;
+}
+
+.offerWrp>div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.Image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.description {
+    position: absolute;
+    z-index: 10;
+    color: #fff;
+    background: transparent;
     height: 100%;
     width: 100%;
+    background: linear-gradient(transparent, #000000a6);
+    top: 10px;
 }
 
-.head {
-    color: #fff;
+.description>div {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
 }
 
-.dis {
-    color: #fff;
+.description>div>h1,
+.description>div>p {
+    margin: 0px;
+    padding: 0px;
 }
 
-.btn {
-    color: #fff;
-    background: var(--btnBackground);
-    border: none;
-    padding: 10px 10px;
-    margin-top: 20px;
+.description>div>p {
+    padding-bottom: 10px;
+    padding-top: 8px;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width:768px) {
+    .offerWrp {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+
+    }
+
 }
